
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings_preference">
    <PreferenceCategory android:title="@string/ui"
        android:key="interface">
        <Preference
            android:key="theme"
            android:title="@string/theme"/>
        <Preference
            android:key="colors"
            android:summary="@string/color_summary"
            android:title="@string/color_title"/>

        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="circularimages"
            android:summary="@string/circularimages"
            android:title="@string/circularicons"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="showDividers"
            android:title="@string/showDividers"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="showHeaders"
            android:title="@string/showHeaders"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="intelliHideToolbar"
            android:summary="@string/intellihide_toolbar_summary"
            android:title="@string/intellihide_toolbar_title"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sidebar_preferences"
        android:key="sidebar">
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="sidebar_folders_enable"
            android:title="@string/showfolders_pref_title"/>
        <Preference
            android:dependency="sidebar_folders_enable"
            android:key="sidebar_folders"
            android:title="@string/showfolders_pref"/>

        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="sidebar_quickaccess_enable"
            android:title="@string/showquickaccess_pref_title"/>
        <Preference
            android:dependency="sidebar_quickaccess_enable"
            android:key="sidebar_quickaccess"
            android:title="@string/showquickaccess_pref"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general"
        android:key="settings_general">
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="savepaths"
            android:summary="@string/savepathsummary"
            android:title="@string/savepaths"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="showThumbs"
            android:summary="@string/thumbSummary"
            android:title="@string/thumb"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="false"
            android:key="showHidden"
            android:title="@string/hidden"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="showLastModified"
            android:summary="@string/lastModifiedSummary"
            android:title="@string/lastModifiedPref"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="true"
            android:key="showFileSize"
            android:summary="@string/sizePrefSummary"
            android:title="@string/sizePref"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="false"
            android:key="goBack_checkbox"
            android:summary="@string/back_summary"
            android:title="@string/back_title"/>
        <Preference
            android:key="columns"
            android:title="@string/gridcolumnno"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/archive_preferences">
        <EditTextPreference
            android:key="extractpath"
            android:summary="@string/archive_summary"
            android:title="@string/archive_extract_folder">
        </EditTextPreference>
        <EditTextPreference
            android:key="zippath"
            android:summary="@string/zip_summary"
            android:title="@string/zip_create_folder">
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security"
        android:key="security">
        <Preference
            android:key="crypt_password"
            android:summary="@string/crypt_pref_master_password_summary"
            android:title="@string/crypt_pref_master_password_title">
        </Preference>

        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:key="crypt_fingerprint"
            android:summary="@string/crypt_pref_fingerprint_summary"
            android:title="@string/crypt_pref_fingerprint_title"
            android:enabled="false"
            >
        </com.augustro.filemanager.ui.views.preference.CheckBox>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/miscellaneous"
        android:key="category_miscellaneous">
        <Preference
            android:key="advancedsearch"
            android:title="@string/advanced_search"/>

        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="false"
            android:key="showPermissions"
            android:summary="@string/rootPrefSummary"
            android:title="@string/rootPref"/>

        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="false"
            android:key="typeablepaths"
            android:summary="@string/typeablepaths_summary"
            android:title="@string/typeablepaths_title"/>

        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="false"
            android:key="texteditor_newstack"
            android:title="@string/preference_newstack_title"
            android:summary="@string/preference_newstack_summary"/>
        <com.augustro.filemanager.ui.views.preference.CheckBox
            android:defaultValue="false"
            android:key="rootmode"
            android:summary="@string/rootmodesummary"
            android:title="@string/rootmode"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advanced"
        android:key="advanced">

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="feedback"
            android:title="@string/feedback"/>
    </PreferenceCategory>
</PreferenceScreen>
