
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/paste"
        android:title="@string/paste"
        android:icon="@drawable/ic_content_paste_white_24dp"
        app:showAsAction="ifRoom|withText"
        android:visible="false" />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_white_24dp"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_white_24dp">
        <menu >
            <item android:title="@string/sortby"
                android:id="@+id/sortby"/>
            <item android:title="@string/directorysort"
                android:id="@+id/dsort"/>
        </menu>

    </item>
    <item android:id="@+id/history"
        android:icon="@drawable/ic_history_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/history"/>
    <item
        android:id="@+id/view"
        android:title=""
        android:visible="false"/>
    <item
        android:id="@+id/hiddenitems"
        android:visible="false"
        android:title="@string/hiddenfiles" />
    <item
        android:id="@+id/sethome"
        android:title="@string/setashome"/>
    <item
        android:id="@+id/extract"
        android:title="@string/extract"
        android:visible="false"/>

    <!-- orderInCategory=100 to have the element exit always at the end of the list -->
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:orderInCategory="90"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/rate"
        android:title="@string/rate"
        android:orderInCategory="200"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="300"/>

</menu>
