
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save"
        android:title="@string/save"
        android:visible="false"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/find"
        android:title="@string/find"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/details"
        android:title="@string/details"
        app:showAsAction="never" />
    <item
        android:id="@+id/openwith"
        android:title="@string/openwith" />
    <item
        android:id="@+id/monofont"
        android:title="@string/monofont"
        android:checkable="true"
        app:showAsAction="never" />
</menu>
